--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ header li a{
     font-size: .8rem;
     padding: .8rem 3rem;
     border-radius: 2.5px;
+    text-align: center;
     cursor: pointer;
 }
 
@@ -179,6 +180,58 @@ form{
     line-height: 1.3;
 }
 
+.early__Access{
+    background-color: var(--clr-Desaturated-Blue);
+    color: var(--clr-Light-Grayish-Blue);
+    padding: 3.5rem 2.5rem;
+    gap: 1.5rem;
+    justify-content: space-between;
+    line-height: 1.4;
+}
+
+h3{
+    font-size: 1.7rem;
+    font-weight: var(--H-Weights);
+    font-family: var(--Raleway);
+    line-height: 1.5;
+}
+
+.get__Access{
+    flex-direction: column;
+    gap: 1rem;
+    width: 40%;
+}
+
+.start__Free{
+    width: 40%;
+    flex-direction: column;
+    justify-content: center;
+    gap: .7rem;
+}
+
+.start__Free input{
+    height: 35px;
+    width: 80%;
+}
+
+.start__Free .blue__Button{
+    width: 50%;
+}
+
+
+footer{
+    padding: 3.5rem 2.5rem;
+    color: white;
+    background-color: var(--clr-Very-Dark-Blue);
+    flex-direction: column;
+}
+
+footer .logo img{
+    width: 155px;
+    height: 45px;
+}
+
+
 
 @media(max-width:800px) {
     .get__Started, .team{
@@ -198,5 +251,35 @@ form{
 
     .remarks{
         align-items: center;
+    }
+
+    .early__Access{
+        flex-direction: column;
+    }
+
+    .get__Access, .start__Free{
+        width: 100%;
+    }
+
+    h3{
+        text-align: center;
+    }
+
+    .early__Access p{
+        text-align: center;
+    }
+
+    .start__Free{
+        justify-content: center;
+        align-items: center;
+    }
+
+    .start__Free input{
+        height: 40px;
+        width: 80%;
+    }
+    
+    .start__Free .blue__Button{
+        width: 80%;
     }
 }
