--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ body{
     color: var(--clr-Very-Dark-Blue);
 }
 
-h2{
+h1, h2{
     font-size: 2.1rem;
     font-weight: var(--H-Weights);
     font-family: var(--Raleway);
@@ -94,8 +94,8 @@ header li a{
 header{
     flex-direction: column;
     gap: 1.5rem;
-    padding: 2.5rem;
-    margin-bottom: 3rem;
+    padding: 4rem;
+    margin-bottom: 4rem;
 }
 
 nav{
@@ -145,7 +145,7 @@ form{
 .team{
     background-color: var(--clr-Light-Grayish-Blue);
     gap: 2rem;
-    padding: 2.5rem;
+    padding: 4rem;
 }
 
 .team a{
@@ -196,7 +196,7 @@ form{
 .early__Access{
     background-color: var(--clr-Desaturated-Blue);
     color: var(--clr-Light-Grayish-Blue);
-    padding: 3.5rem 2.5rem;
+    padding: 4rem;
     gap: 1.5rem;
     justify-content: space-between;
     line-height: 1.4;
@@ -232,7 +232,7 @@ h3{
 }
 
 footer{
-    padding: 3.5rem 3rem;
+    padding: 4rem;
     color: white;
     background-color: var(--clr-Very-Dark-Blue);
     flex-direction: column;
